@@ -30,6 +30,8 @@ require_once($GLOBALS['PATH_community'] . 'model/class.tx_community_model_userga
 require_once($GLOBALS['PATH_community'] . 'controller/class.tx_community_controller_abstractcommunityapplication.php');
 require_once($GLOBALS['PATH_community'] . 'controller/class.tx_community_controller_abstractcommunityapplicationwidget.php');
 
+require_once($GLOBALS['PATH_community'] . 'view/class.tx_community_view_abstractview.php');
+
 /**
  * central application controller for the community extension
  *
