@@ -22,7 +22,6 @@
 *  This copyright notice MUST APPEAR in all copies of the script!
 ***************************************************************/
 
-require_once($GLOBALS['PATH_community'] . 'interfaces/interface.tx_community_view.php');
 require_once($GLOBALS['PATH_community'] . 'classes/class.tx_community_template.php');
 
 /**
@@ -32,20 +31,9 @@ require_once($GLOBALS['PATH_community'] . 'classes/class.tx_community_template.p
  * @package TYPO3
  * @subpackage community
  */
-class tx_community_view_userlist_Index implements tx_community_View {
-
-	protected $templateFile;
-	protected $languageKey;
+class tx_community_view_userlist_Index extends tx_community_view_AbstractView {
 
 	protected $userModel = array();
-
-	public function setTemplateFile($templateFile) {
-		$this->templateFile = $templateFile;
-	}
-
-	public function setLanguageKey($languageKey) {
-		$this->languageKey = $languageKey;
-	}
 
 	public function setUserModel(array $userModel) {
 		$this->userModel = $userModel;
