@@ -23,7 +23,6 @@
 ***************************************************************/
 
 
-require_once($GLOBALS['PATH_community'] . 'interfaces/interface.tx_community_view.php');
 require_once($GLOBALS['PATH_community'] . 'classes/class.tx_community_template.php');
 require_once($GLOBALS['PATH_community'] . 'classes/viewhelper/class.tx_community_viewhelper_lll.php');
 
@@ -35,21 +34,11 @@ require_once($GLOBALS['PATH_community'] . 'classes/viewhelper/class.tx_community
  * @package TYPO3
  * @subpackage community
  */
-class tx_community_view_userprofile_EditRelationship implements tx_community_View {
+class tx_community_view_userprofile_EditRelationship extends tx_community_view_AbstractView {
 
-	protected $templateFile;
-	protected $languageKey;
 	protected $friendUser;
 	protected $relationshipOptions;
 	protected $formAction;
-
-	public function setTemplateFile($templateFile) {
-		$this->templateFile = $templateFile;
-	}
-
-	public function setLanguageKey($languageKey) {
-		$this->languageKey = $languageKey;
-	}
 
 	public function setFriendUser(tx_community_model_User $friendUser) {
 		$this->friendUser = $friendUser;
